--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,6 +1,13 @@
 <html>
+<head>
+  <title>Ok</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
 <body>
-  <p><%= message %></p>
+  <p>
+    <%= message %>
+  </p>
   </div>
 </body>
+
 </html>
